[package]
name = "phase"
version = "0.1.0"
authors = ["Max Tyler <maxastyler@gmail.com>"]
edition = "2018"

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]

[dependencies]
gtk = "^0.5.0"
cairo-rs = "^0.5.0"
relm = "^0.15.0"
relm-derive = "^0.15.0"
relm-attributes = "^0.15.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
