[package]
name = "phase"
version = "0.1.0"
authors = ["Max Tyler <maxastyler@gmail.com>"]
edition = "2018"

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]

[dependencies]
gtk = "0.6.0"
gdk-pixbuf = "0.6.0"
gdk = "0.10.0"
cairo-rs = "0.6"
relm = "0.16.0"
relm-derive = "0.16.0"
relm-attributes = "0.16.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
